Versão beta do projeto

--- a/angular.json
+++ b/angular.json
@@ -37,9 +37,16 @@
               },
               {
                 "input": "src/global.scss"
+              }, 
+              {
+                "input": "node_modules/bootstrap/dist/css/bootstrap.min.css"
               }
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -102,7 +109,7 @@
             "scripts": [],
             "assets": [
               {
-                "glob": "favicon.ico",
+                "glob": "",
                 "input": "src/",
                 "output": "/"
               },
