--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.11",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
@@ -23,7 +25,14 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
+    "firebase": "^7.14.0",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
